Added data to experience

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
                         I'm certified in AWS (CCP) and am working towards the Developer Associate certification. My goal
                         is to keep improving,
                         collaborate with others and progress ahead in my career. I am currently grinding up my DSA
-                        skills. Here are my <a href="#" class="view-stats" data-toggle="modal" data-target="#statsModal">Stats</a>.
+                        skills. Here are my <a href="#" class="view-stats" data-toggle="modal"
+                            data-target="#statsModal">Stats</a>.
                     </p>
                 </div>
                 <div class="text-button">
-                    <div class="modal fade" id="statsModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel" aria-hidden="true">
+                    <div class="modal fade" id="statsModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel"
+                        aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
@@ -53,28 +55,31 @@
                     <div class="experience-item">
                         <h4>Programmer Analyst</h4>
                         <p><b>Cognizant Technology Solutions | Sept 2022 - Present</b></p>
-                        <p><i class="fa-solid fa-angle-right"></i> Played a key role in development of a menu feature
-                            for a
-                            major food-chain’s digital ordering
-                            platform OrderServ 2.0 .
-                            Optimized database operations to prevent database throttling during High Traffic periods.
+                        <p><i class="fa-solid fa-angle-right"></i>Developed a time-based menu feature as a
+                            key enhancement in OrderServ 2.0,
+                            allowing dynamic display of breakfast, lunch, and dinner options based on store
+                            hours and user time zones, improving personalization and reducing ordering errors.
                         </p>
-                        <p><i class="fa-solid fa-angle-right"></i> Provided technical support, successfully troubleshot
-                            and
-                            resolved critical production/non-prod
-                            issues and
-                            implementing bug fixes and enhancements to maintain system stability ensuring minimal
-                            downtime.
+                        <i class="fa-solid fa-angle-right"></i> Designed the logic to support store-level configuration allowing different
+                        outlets to have unique menu schedule and real time updates.
                         </p>
-                        <p><i class="fa-solid fa-angle-right"></i> Collaborated effectively with cross functional teams
-                            to
-                            enhance ordering, payment and delivery
-                            features.Regularly
-                            engaged with client from various markets, gathering requirements and incorporating feedback
-                            to
-                            improve platform
-                            functionality</p>
-
+                        <i class="fa-solid fa-angle-right"></i> Integrated React.js frontends with existing .NET APIs to integrate a page to
+                        application for end-users leveraging hooks and RESTful services
+                        </p>
+                        <i class="fa-solid fa-angle-right"></i> Worked across core flows like ordering, payments and delivery. Integrated
+                        third-party payment gateways and delivery services, handling edge cases like
+                        failed paymentsand location mismatches.
+                        </p>
+                        <i class="fa-solid fa-angle-right"></i> Built asynchronous workflows for background processes like order
+                        confirmation, Integration logs,etc using message queues
+                        </p>
+                        <p><i class="fa-solid fa-angle-right"></i> Collaborated with cross-functional teams in Agile sprints, aligning feature
+                        delivery with fast-moving business priorities.
+                        </p>
+                        <p><i class="fa-solid fa-angle-right"></i> Provided production support,resolved critical bugs, and contributed system
+                        enhancements that improved uptime and performance.</p>
+                        <p><i class="fa-solid fa-angle-right"></i> Participated in code reviews and shared architectural improvements that
+                        promoted cleaner, more maintainable microservices.</p>
                     </div>
                     <div class="experience-item">
                         <h4>Programmer Analyst</h4>
