Update the name and dom script

--- a/index.html
+++ b/index.html
@@ -15,17 +15,10 @@
         <header>
             <div class="container">
                 <div class="text-box">
-                    <h1><span class="head1">RITIK KUMAR JAIN</span></h1>
-                    <p>Hi I'M Ritik, I build reliable backend systems using C#, Node.js, and AWS. Currently, I’m working
-                        on a omni digital food ordering system
-                        for multiple markets at Cognizant. I pay close attention to detail, ensuring to delivery feature
-                        of quality.
-                        I'm certified in AWS (CCP) and am working towards the Developer Associate certification. My goal
-                        is to keep improving,
-                        collaborate with others and progress ahead in my career. I am currently grinding up my DSA
-                        skills. Here are my <a href="#" class="view-stats" data-toggle="modal"
-                            data-target="#statsModal">Stats</a>.
+                    <h1><span class="head1" id="title"></span></h1>
+                    <p id ="description1">
                     </p>
+                    <!-- I am currently grinding up my DSA skills. Here are my <a href="#" class="view-stats" data-toggle="modal" data-target="#statsModal">Stats.</a> -->
                 </div>
                 <div class="text-button">
                     <div class="modal fade" id="statsModal" tabindex="-1" role="dialog" aria-labelledby="modalLabel"
@@ -53,9 +46,9 @@
                 <h2>Experience</h2>
                 <div class="experience">
                     <div class="experience-item">
-                        <h4>Programmer Analyst</h4>
+                        <h4>Software Engineer</h4>
                         <p><b>Cognizant Technology Solutions | Sept 2022 - Present</b></p>
-                        <p><i class="fa-solid fa-angle-right"></i>Developed a time-based menu feature as a
+                        <p><i class="fa-solid fa-angle-right"></i> Developed a time-based menu feature as a
                             key enhancement in OrderServ 2.0,
                             allowing dynamic display of breakfast, lunch, and dinner options based on store
                             hours and user time zones, improving personalization and reducing ordering errors.
@@ -261,6 +254,7 @@
             </div>
         </footer>
         <script> // Smooth scrolling for anchor links document.querySelectorAll('a[href^="#"]').forEach(anchor => { anchor.addEventListener('click', function (e) { e.preventDefault(); document.querySelector(this.getAttribute('href')).scrollIntoView({ behavior: 'smooth' }); }); }); </script>
+        <script src="./script.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.2/dist/umd/popper.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
