--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
            <div>
                <h2 class="text-lg sm:text-xl font-bold text-purple-700 mb-3 border-b border-purple-200 pb-1">Connect</h2>
                <!-- LinkedIn -->
-               <a href="https://linkedin.com/in/yourusername" target="_blank" class="group flex items-center gap-4 bg-white/70 backdrop-blur-sm rounded-xl shadow hover:shadow-lg transition-all mb-4 p-2 hover:translate-x-1">
+               <a href="https://linkedin.com/in/ritikkumarjain" target="_blank" class="group flex items-center gap-4 bg-white/70 backdrop-blur-sm rounded-xl shadow hover:shadow-lg transition-all mb-4 p-2 hover:translate-x-1">
                    <div class="bg-gradient-to-tr from-purple-600 to-pink-500 w-10 h-10 flex items-center justify-center rounded-full text-white">
                        <i class="fab fa-linkedin-in text-sm"></i>
                    </div>
                    <p class="text-gray-800 font-semibold group-hover:text-purple-700 transition">LinkedIn</p>
                </a>
                <!-- GitHub -->
-               <a href="https://github.com/yourusername" target="_blank" class="group flex items-center gap-4 bg-white/70 backdrop-blur-sm rounded-xl shadow hover:shadow-lg transition-all mb-4 p-2 hover:translate-x-1">
+               <a href="https://github.com/ritikkumarjain" target="_blank" class="group flex items-center gap-4 bg-white/70 backdrop-blur-sm rounded-xl shadow hover:shadow-lg transition-all mb-4 p-2 hover:translate-x-1">
                    <div class="bg-gradient-to-tr from-gray-800 to-gray-600 w-10 h-10 flex items-center justify-center rounded-full text-white">
                        <i class="fab fa-github text-sm"></i>
                    </div>
                    <p class="text-gray-800 font-semibold group-hover:text-gray-900 transition">GitHub</p>
                </a>
                <!-- Email -->
-               <a href="mailto:you@example.com" class="group flex items-center gap-4 bg-white/70 backdrop-blur-sm rounded-xl shadow hover:shadow-lg transition-all mb-4 p-2 hover:translate-x-1">
+               <a href="mailto:ritikjain10@outlook.com" class="group flex items-center gap-4 bg-white/70 backdrop-blur-sm rounded-xl shadow hover:shadow-lg transition-all mb-4 p-2 hover:translate-x-1">
                    <div class="bg-gradient-to-tr from-purple-400 to-indigo-500 w-10 h-10 flex items-center justify-center rounded-full text-white">
                        <i class="fas fa-envelope text-sm"></i>
                    </div>
@@ -73,7 +73,7 @@
            <div>
                <h2 class="text-xl font-extrabold text-purple-700 mb-4">Documents</h2>
                <!-- Resume -->
-                <a href="/resume.pdf" target="_blank" rel="noopener noreferrer" class="group flex items-center gap-4 bg-white/70 backdrop-blur-sm rounded-xl shadow hover:shadow-lg transition-all mb-4 p-2 hover:translate-x-1">
+                <a href="https://1drv.ms/b/c/80c6edf190f3f6c6/Ecb285Dx7cYggIAcAQAAAAABV3sInxphXRB1HBFaafFVFw" target="_blank" rel="noopener noreferrer" class="group flex items-center gap-4 bg-white/70 backdrop-blur-sm rounded-xl shadow hover:shadow-lg transition-all mb-4 p-2 hover:translate-x-1">
                     <div class="bg-gradient-to-tr from-purple-600 to-pink-500 w-10 h-10 flex items-center justify-center rounded-full text-white">
                         <i class="fas fa-file-download text-sm"></i>
                     </div>
@@ -81,7 +81,7 @@
                 </a>
 
                 <!-- Cover Letter -->
-                <a href="/cover-letter.pdf" target="_blank" rel="noopener noreferrer" class="group flex items-center gap-4 bg-white/70 backdrop-blur-sm rounded-xl shadow hover:shadow-lg transition-all p-2 hover:translate-x-1">
+                <a href="https://1drv.ms/b/c/80c6edf190f3f6c6/Ecb285Dx7cYggIAdAQAAAAABMXgIL7I9mQHxBPRRak2l6Q" target="_blank" rel="noopener noreferrer" class="group flex items-center gap-4 bg-white/70 backdrop-blur-sm rounded-xl shadow hover:shadow-lg transition-all p-2 hover:translate-x-1">
                     <div class="bg-gradient-to-tr from-indigo-500 to-purple-600 w-10 h-10 flex items-center justify-center rounded-full text-white">
                         <i class="fas fa-file-alt text-sm"></i>
                     </div>
