Name Corrected. 404Html added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ritik's Website</title>
+    <link rel="icon" href="/favicon.ico" />
+    <title>Ritik Jain – Portfolio</title>
+    <meta name="description" content="Hi, I'm Ritik Jain – a developer who builds clean, efficient, and creative tech solutions." />
+    <meta property="og:title" content="Ritik Jain – Portfolio" />
+    <meta property="og:image" content="/thumbnail.png" />
+    <meta property="og:description" content="Explore my projects, skills, and experience in software development." />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -36,10 +41,10 @@
    <div class="flex flex-col lg:flex-row flex-1">
        <!-- Top Left -->
        <div class="w-full lg:w-[80%] relative bg-gradient-to-br from-purple-600 to-indigo-700 flex items-center justify-center min-h-[200px]">
-           <h1 class="z-10 text-3xl sm:text-4xl md:text-5xl font-extrabold text-white animate-slide-in tracking-wide">
-               Ritik Jain
-           </h1>
-       </div>
+            <h1 class="z-10 text-3xl sm:text-4xl md:text-5xl font-extrabold text-white animate-slide-in tracking-wide">
+               Ritik Kumar Jain
+            </h1>
+        </div>
 
        <!-- Sidebar: Hidden on small screens -->
        <aside class="hidden lg:flex w-[20%] bg-gray-100 flex-col justify-between p-4 space-y-4 overflow-y-auto max-h-full animate-fade-in">
