Final Touch to utility

--- a/index.html
+++ b/index.html
@@ -146,21 +146,19 @@
     <!-- Mobile Social Footer -->
     <footer class="lg:hidden bg-gray-100 border-t border-gray-300 px-4 py-6 w-full">
         <h2 class="text-lg font-bold text-purple-700 mb-3 text-center">Connect</h2>
-        <div class="flex justify-center gap-6">
-            <a href="https://linkedin.com/in/yourusername" target="_blank" class="text-purple-700 hover:text-purple-900">
+        <div class="flex justify-center gap-4 sm:gap-6">
+            <a href="https://linkedin.com/in/ritikkumarjain" target="_blank" aria-label="LinkedIn" class="text-purple-700 hover:text-purple-900">
                 <i class="fab fa-linkedin-in text-2xl"></i>
             </a>
-            <a href="https://github.com/yourusername" target="_blank" class="text-gray-800 hover:text-black">
+            <a href="https://github.com/ritikkumarjain" target="_blank" aria-label="GitHub" class="text-gray-800 hover:text-black">
                 <i class="fab fa-github text-2xl"></i>
             </a>
-            <a href="mailto:you@example.com" class="text-indigo-600 hover:text-indigo-800">
+            <a href="mailto:ritikjain10@outlook.com" aria-label="Email" class="text-indigo-600 hover:text-indigo-800">
                 <i class="fas fa-envelope text-2xl"></i>
             </a>
         </div>
     </footer>
-
-
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
