Auto scroll, Selections and Hover animation

--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
     <div class="flex-1 bg-white px-4 sm:px-6 md:px-8 py-6">
         <!-- Cards Row -->
         <div class="flex flex-wrap justify-center gap-4 sm:gap-6 mb-6">
-            <button onclick="showSection('experience')" class="w-full sm:w-auto bg-purple-100 hover:bg-purple-200 px-6 py-4 rounded-xl shadow transition-all">
+            <button onclick="showSection('experience')" class="w-full sm:w-auto bg-purple-100 hover:bg-purple-200 px-6 py-4 rounded-xl shadow transition-all" data-section="experience">
                 <p class="text-lg font-semibold">Experience</p>
             </button>
-            <button onclick="showSection('certifications')" class="w-full sm:w-auto bg-purple-100 hover:bg-purple-200 px-6 py-4 rounded-xl shadow transition-all">
+            <button onclick="showSection('certifications')" class="w-full sm:w-auto bg-purple-100 hover:bg-purple-200 px-6 py-4 rounded-xl shadow transition-all" data-section="certifications">
                 <p class="text-lg font-semibold">Certifications</p>
             </button>
-            <button onclick="showSection('skills')" class="w-full sm:w-auto bg-purple-100 hover:bg-purple-200 px-6 py-4 rounded-xl shadow transition-all">
+            <button onclick="showSection('skills')" class="w-full sm:w-auto bg-purple-100 hover:bg-purple-200 px-6 py-4 rounded-xl shadow transition-all" data-section="skills">
                 <p class="text-lg font-semibold">Skills</p>
             </button>
         </div>
